ehcache-2.3.0
==================
 <release version="2.3.0" date="2010-10-15" description="Major release with new features">
            <action dev="Gary Keim" type="add">
                Additional statistics that break out missNotFound into missInMemory, missOffHeap, and
                missOnDisk.
            </action>
        </release>

ehcache-2.2.0
===================
    <release version="2.2.0" date="2010-07-16" description="Bug fixes">
        <action dev="Geert Bevin" type="fix">
            Renamed TerracottaConfigConfiguration to TerracottaClientConfiguration.
        </action>
        <action dev="Geert Bevin" type="fix" issue="EHC-736">
            Creating a new cache manager ready to talk to terracotta is way too verbose
        </action>
        <action dev="Geert Bevin" type="fix" issue="EHC-742">
            The CacheWriter init method is only called when it was declared through config since
            that code triggers when the CacheManager inits the cache
        </action>
        <action dev="Geert Bevin" type="fix" issue="EHC-733">
            Support getCurrentNode and waitUntilNodeJoins in Ehcache cluster API
        </action>
        <action dev="Abhishek Sanoujam" type="add">
            Added new attribute "storageStrategy" for Terracotta Clustered Caches. This attribute is optional with default
            value "classic". The other allowed value is "DCV2" and only available for enterprise users. 
            storageStrategy=DCV2 provides far greater scale and throughput.
        </action>
        <action dev="Abhishek Sanoujam" type="fix" issue="EHC-713">
            Cleaned up Configuration Generator, accessible using cacheManager.get[Active/Original]ConfigurationText method(s).
            Can be used independently giving greater control over output format - indentation, newlines, suppressing 
            default values etc.
        </action>
        <action dev="Abhishek Sanoujam" type="fix">