@@ -49,6 +49,11 @@
                 the decorated cache with same name as the cache.
             </action>
         </release>
+        <release version="2.2.1" date="2010-10-11" description="Bug fixes">
+            <action dev=Alex Snaps" date="2010-10-04" type="fix">
+                Ehcache evictor not clearing objects as expected
+            </action>
+        </release>
         <release version="2.2.0" date="2010-07-16" description="Bug fixes">
             <action dev="Geert Bevin" type="fix">
                 Renamed TerracottaConfigConfiguration to TerracottaClientConfiguration.
